# signate_technopro

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
techno/: run.sh
techno/config/: preprocess_cfg.yaml  train_cfg.yaml
techno/src/: preprocess.py  submit.py  train.py  utils.py
techno/src/models/: augmentation.py  dataset.py  loss.py  model.py
