[tool.poetry]
name = "competitions"
version = "0.1.0"
description = "コンペ用の環境"
authors = ["tubo"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
pandas = "^1.3.5"
numpy = ">=1.2"
jupyter = "^1.0.0"
scikit-learn = "^1.0.1"
matplotlib = "^3.5.1"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.11.2"
pandarallel = "^1.5.4"
ipykernel = "^6.6.0"
requests = "^2.26.0"
immutabledict = ">=2.0"
tqdm = "^4.62.3"
ImageHash = "^4.2.1"
datashader = "^0.13.0"
umap-learn = "^0.5.2"
timm = "^0.4.12"
python-box = "^5.4.1"
ttach = "^0.0.3"
pytorch-lightning = "1.4.0"
grad-cam = "^1.3.6"
plotly = "^5.5.0"
tensorflow = "2.7.0"
# torch = {url="https://download.pytorch.org/whl/cu113/torch-1.10.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
# torchvision = {url="https://download.pytorch.org/whl/cu113/torchvision-0.11.2%2Bcu113-cp38-cp38-linux_x86_64.whl"}
# torchaudio = {url="https://download.pytorch.org/whl/cu113/torchaudio-0.10.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
# torch-scatter = {url="https://data.pyg.org/whl/torch-1.10.0%2Bcu113/torch_scatter-2.0.9-cp38-cp38-linux_x86_64.whl"}
# torch-sparse = {url="https://data.pyg.org/whl/torch-1.10.0%2Bcu113/torch_sparse-0.6.12-cp38-cp38-linux_x86_64.whl"}
# torch-cluster = {url="https://data.pyg.org/whl/torch-1.10.0%2Bcu113/torch_cluster-1.5.9-cp38-cp38-linux_x86_64.whl"}
# torch-spline-conv = {url="https://data.pyg.org/whl/torch-1.10.0%2Bcu113/torch_spline_conv-1.2.1-cp38-cp38-linux_x86_64.whl"}
# jaxlib = {url="https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.1.75+cuda11.cudnn82-cp38-none-manylinux2010_x86_64.whl"}
# dm-haiku = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
